# pretrain

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  changelog.md  changelog_moe.md  notes.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pr-test.yml
benchmark/kernel/: bench_rmsnorm.py  utils.py
benchmarks/: bench_bpe.py  bench_train.py  benchmark_rmsnorm.py  benchmark_swiglu.py  nsys_train.py  profile_train.sh
benchmarks/kernel/: bench_cross_entropy.py  bench_flashattn.py  bench_layernorm.py  bench_moe_routing.py  bench_moe_scatter.py  bench_rmsnorm.py  bench_rope.py  bench_swiglu.py  readme.md
benchmarks/trainer/: bench_train.py  nsys_train.py
configs/: deepseek_v2.yaml  gpt2_124m.yaml  gpt2_muon.yaml  gpt2_small.yaml  qwen3_0.5b.yaml  qwen3_133m_a35m.yaml  qwen3_145m.yaml  qwen3_183m_a51m.yaml  qwen3_404m.yaml  qwen3_51m.yaml  qwen3_53m_mla.yaml  qwen3_57m.yaml  qwen3_mla_57m.yaml  qwen3_moe_133m.yaml
docs/grokking_wd_spike/: README.md  repro_ls_fix.py  repro_softmax_collapse.py  repro_wd_spike.py
docs/torch_compile_prefetch_bug/: README.md  repro.py
experiments/: README.md
experiments/activation/: README.md  qwen3_51m_bilinear.yaml  qwen3_51m_bilinear2.yaml  qwen3_51m_geglu.yaml  qwen3_51m_geglu2.yaml  qwen3_51m_gelu.yaml  qwen3_51m_gelu2.yaml  qwen3_51m_leaky_reglu.yaml  qwen3_51m_leaky_reglu2.yaml  qwen3_51m_leaky_relu.yaml  qwen3_51m_leaky_relu2.yaml  qwen3_51m_powlu.yaml  qwen3_51m_reglu.yaml  qwen3_51m_reglu2.yaml  qwen3_51m_relu.yaml  qwen3_51m_relu2.yaml  qwen3_51m_silu.yaml  qwen3_51m_silu2.yaml  qwen3_51m_swiglu.yaml  qwen3_51m_swiglu2.yaml  qwen3_57m_bilinear.yaml  qwen3_57m_bilinear2.yaml  qwen3_57m_geglu.yaml  qwen3_57m_geglu2.yaml  qwen3_57m_gelu.yaml  qwen3_57m_gelu2.yaml  qwen3_57m_leaky_reglu.yaml  qwen3_57m_leaky_reglu2.yaml  qwen3_57m_leaky_relu.yaml  qwen3_57m_leaky_relu2.yaml  qwen3_57m_powlu.yaml  qwen3_57m_reglu.yaml  qwen3_57m_reglu2.yaml  qwen3_57m_relu.yaml  run.sh  (+5 more)
profile/: README.md  profile_model.py  run_profiles.sh
scripts/: debug_optim.py  debug_weight_stats.py  eval.py  eval_tokenizer.py  gpu_fans.py  gpu_idle_alert.sh  gpu_power.py  inspect_weights.py  migrate_attn_config.py  migrate_config.py  migrate_mlp_config.py  pick_free_gpu.py  preprocess_data.py  reorder_model_keys.py  run_pipeline.sh  send_email.py  train.py  train_tokenizer.py  watch_pid.sh
tests/: test_components.py  test_config.py  test_dataset.py  test_gpt2.py  test_gpu_select.py  test_masking_utils.py  test_metrics.py  test_moe.py  test_train_smoke.py  test_trainer.py  test_watch_pid.sh
(+1211 files in other folders)
