[project]
name = "pretrain"
version = "0.1.0"
description = "Pretraining experiments — different architectures, datasets, hyperparameters"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9",
    "tokenizers>=0.22",
    "datasets>=4.5",
    "wandb>=0.24",
    "pyyaml>=6.0",
    "numpy>=2.4",
    "triton>=3.6",
    "torchao>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
