[build-system]
requires = ["setuptools>=64", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pretrain"
version = "0.1.0"
description = "Pretraining experiments — different architectures, datasets, hyperparameters"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10",
    "tokenizers>=0.22",
    "regex>=2024.0",
    "datasets>=4.5",
    "wandb>=0.26.0",
    "pyyaml>=6.0",
    "numpy>=2.4",
    "triton>=3.6",
    "torchao>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "transformers>=4.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pre-commit>=4.0",
]
